# meta-sprint

./: .gitignore  .gitmodules  GETTING_STARTED.md  LICENSE  README.md  SUBMODULES.md  pyproject.toml
.claude/skills/github-weekly-report/: SKILL.md
.github/ISSUE_TEMPLATE/: documentation.yml
docs/: README.md  modules_analysis_and_serving_agent_requirements.md  project_vision.md  rust_llm_server_analysis.md  serving_agent_implementation_plan.md
docs/innovation_project/: declarative-agent-engine-generation.md  kv-context-unified-mem.md
docs/report/: team_monthly_report_20260401_20260509  team_monthly_report_20260401_20260509.html  weekly-report-2026-05-21.md  weekly-report-2026-05-29.md
examples/: config.toml
serving_agent/: __init__.py  cli.py
serving_agent/assembler/: __init__.py  builder.py
serving_agent/config/: __init__.py  parser.py  spec.py  validator.py
serving_agent/pypto_codegen/: __init__.py  kernelgen.py
templates/: Cargo.toml.j2  build.rs.j2
templates/backends/pypto/: ops.rs.j2
templates/core/: main.rs.j2
tests/unit/: test_config.py
